--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>¿Qué información te gustaría ver?</p>
         <ul>
             <li><a href="/vistas/tablagen.html">Tabla General</a></li>
-            <li><a href="#">Tu equipo favorito</a></li>
+            <li><a href="/vistas/Equipos.html">Tu equipo favorito</a></li>
         </ul>
     </div>
 
