--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul class="submenu">
                         <li><a href="/vistas/tablagen.html">Tabla General</a></li>
                         <li><a href="/vistas/tablagol.html">Tabla de Goleadores</a></li>
-                        <li><a href="#">Tabla de Porterías</a></li>
+                        <li><a href="/vistas/menosgol.html">Tabla de Porterías</a></li>
                     </ul>
                 </li>
                 <li><a href="/vistas/Equipos.html">Equipos</a></li>
