--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </ul>
                 </li>
                 <li><a href="/vistas/Equipos.html">Equipos</a></li>
-                <li><a href="#">Calendario</a></li>
+                <li><a href="/vistas/calendario.html">Calendario</a></li>
             </ul>
         </nav>
     </header>
